SimLang/src/test/resources/test/coco/invalid/MultipleEntries.sim
sim MultipleEntries {
  sim_type realtime;
  sim_type maxfps;
  map_name error.osm;
}